<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    app:cardCornerRadius="16dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/added_to_cart_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/added_to_cart_question"
            android:textSize="14sp"
            android:paddingBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:paddingTop="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_continue_shopping"
                android:layout_marginEnd="8dp"
                android:textSize="18sp"
                android:backgroundTint="@android:color/holo_orange_dark"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoCart"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/action_go_to_cart"
                android:textSize="18sp"
                android:backgroundTint="@color/primary"/>

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>